[package]
name = "teaclave-sgx-sdk-docs"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "main" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "main" }
sgx_tse  = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "main" }
